# fpl-cli

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  cliff.toml  pyproject.toml  pyrightconfig.json
.agents/: README.md  TOOLS.md
.claude/: settings.json
.claude/output-styles/: fpl-mate.md
.github/workflows/: ci.yml  release.yml
config/: credentials.example.yaml  credentials.yaml.example  defaults.yaml  fixture_predictions.yaml  settings.example.yaml  team_managers.yaml  team_ratings.yaml  team_ratings_overrides.yaml
docs/: architecture.md  command-reference.md  custom-analysis.md  fpl-rules.md
fpl_cli/: __init__.py  constants.py  paths.py  season.py
fpl_cli/agents/: __init__.py  base.py  common.py
templates/: gw_league_recap.md.j2
tests/: __init__.py  conftest.py  test_agents_action.py  test_agents_analysis.py  test_agents_analysis_squad.py  test_agents_base.py  test_agents_data.py  test_agents_data_price.py  test_agents_orchestration.py  test_allocate.py  test_api_client.py  test_api_draft.py  test_api_football_data.py  test_api_understat.py  test_api_vaastav.py  test_bench_order_script.py  test_cli_allocate.py  test_cli_banner.py  test_cli_captain.py  test_cli_chips.py  test_cli_credentials.py  test_cli_custom_analysis.py  test_cli_differentials.py  test_cli_fdr.py  test_cli_fdr_blanks.py  test_cli_fixtures.py  test_cli_format.py  test_cli_format_suppression.py  test_cli_history.py  test_cli_init.py  test_cli_json.py  test_cli_plan_grid.py  test_cli_player.py  test_cli_preview.py  test_cli_price_history.py  test_cli_review.py  test_cli_sell_prices.py  test_cli_squad.py  test_cli_stats.py  test_cli_status.py  (+35 more)
(+99 files in other folders)
